--- a/index.html
+++ b/index.html
@@ -29,5 +29,13 @@
             </tr>
         </tbody>
     </table>
+    <footer class="footer">
+        <div class="footer-note">
+            #100days100projects
+        </div>
+        <div class="footer-note">
+            Made by Shivam Mahajan
+        </div>
+    </footer>
 </body>
 </html>
