--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     Day-1
                 </td>
                 <td>
-                    <a href="/Day1/index.html">Link</a>
+                    <a href="Day1/index.html">Link</a>
                 </td>
             </tr>
         </tbody>
