--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
                     <a href="Day1/index.html">Link</a>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    Day-2
+                </td>
+                <td>
+                    <a href="Day2/index.html">Link</a>
+                </td>
+            </tr>
         </tbody>
     </table>
     <footer class="footer">
