--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
                     <a href="https://github.com/ShivamM2002/100days100projects/tree/main/Day3">Link</a>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    Day-4
+                </td>
+                <td>
+                    <a href="https://github.com/ShivamM2002/100days100projects/tree/main/Day4">Link</a>
+                </td>
+            </tr>
         </tbody>
     </table>
     <footer class="footer">
