--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
                     <a href="https://github.com/ShivamM2002/100days100projects/tree/main/Day6">Link</a>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    Day-7
+                </td>
+                <td>
+                    <a href="https://github.com/ShivamM2002/100days100projects/tree/main/Day7">Link</a>
+                </td>
+            </tr>
         </tbody>
     </table>
     <footer class="footer">
