--- a/index.html
+++ b/index.html
@@ -75,6 +75,22 @@
                     <a href="https://github.com/ShivamM2002/100days100projects/tree/main/Day7">Link</a>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    Day-8
+                </td>
+                <td>
+                    <a href="https://github.com/ShivamM2002/100days100projects/tree/main/Day8">Link</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Day-9
+                </td>
+                <td>
+                    <a href="https://github.com/ShivamM2002/100days100projects/tree/main/Day9">Link</a>
+                </td>
+            </tr>
         </tbody>
     </table>
     <footer class="footer">
