--- a/index.html
+++ b/index.html
@@ -91,6 +91,14 @@
                     <a href="https://github.com/ShivamM2002/100days100projects/tree/main/Day9">Link</a>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    Day-10
+                </td>
+                <td>
+                    <a href="https://github.com/ShivamM2002/100days100projects/tree/main/Day10">Link</a>
+                </td>
+            </tr>
         </tbody>
     </table>
     <footer class="footer">
