--- a/index.html
+++ b/index.html
@@ -99,6 +99,22 @@
                     <a href="https://github.com/ShivamM2002/100days100projects/tree/main/Day10">Link</a>
                 </td>
             </tr>
+            <tr>
+                <td>
+                    Day-11
+                </td>
+                <td>
+                    <a href="https://github.com/ShivamM2002/100days100projects/tree/main/Day11">Link</a>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Day-12
+                </td>
+                <td>
+                    <a href="https://github.com/ShivamM2002/100days100projects/tree/main/Day12">Link</a>
+                </td>
+            </tr>
         </tbody>
     </table>
     <footer class="footer">
