--- a/Day13/index.html
+++ b/Day13/index.html
@@ -14,7 +14,8 @@
 <body>
     <h1>STOPWATCH</h1>
     <div class="stopwatch">
-        00:00
+        <span id="minutes-seconds">00:00</span>
+        <span id="milliseconds">00</span>
     </div>
     <br>
     <div class="buttons">
