--- a/Day19/index.html
+++ b/Day19/index.html
@@ -1,1 +1,68 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/png">
+    <script src="script.js" defer></script>
+    <title>Calender</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="calender">
+            <div class="month">
+                <i class="fa fa-angle-left" id="prev"></i>
+                <div class="date">
+                    <h1></h1>
+                    <p></p>
+                </div>
+                <i class="fa fa-angle-right" id="next"></i>
+            </div>
+            <div class="weekdays">
+                <div>Sun</div>
+                <div>Mon</div>
+                <div>Tues</div>
+                <div>Wed</div>
+                <div>Thurs</div>
+                <div>Fri</div>
+                <div>Sat</div>
+            </div>
+            <div class="days">
+                <div class="prev-date">26</div>
+                <div class="prev-date">27</div>
+                <div class="prev-date">28</div>
+                <div class="prev-date">29</div>
+                <div class="prev-date">30</div>
+
+                <div class="today">29</div>
+                <div>30</div>
+                <div>31</div>
+                <div class="next-date">1</div>
+                <div class="next-date">2</div>
+                <div class="next-date">3</div>
+                <div class="next-date">4</div>
+                <div class="next-date">5</div>
+                <div class="next-date">6</div>
+            </div>
+        </div>
+    </div>
+    <footer class="footer">
+        <div class="footer-note">
+            #100days100projects
+        </div>
+        <div class="footer-note">
+            Made by Shivam Mahajan
+        </div>
+        <div class="footer-note">
+            Day 19
+        </div>
+    </footer>
+</body>
+
+</html>
