--- a/Day23/index.html
+++ b/Day23/index.html
@@ -1,1 +1,55 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="piano.png" type="image/png">
+  <script src="script.js" defer></script>
+  <title>Piano</title>
+</head>
+
+<body>
+  <div class="piano">
+    <div class="key white" data-note="C"></div>
+    <div class="key black" data-note="Db"></div>
+    <div class="key white" data-note="D"></div>
+    <div class="key black" data-note="Eb"></div>
+    <div class="key white" data-note="E"></div>
+    <div class="key white" data-note="F"></div>
+    <div class="key black" data-note="Gb"></div>
+    <div class="key white" data-note="G"></div>
+    <div class="key black" data-note="Ab"></div>
+    <div class="key white" data-note="A"></div>
+    <div class="key black" data-note="Bb"></div>
+    <div class="key white" data-note="B"></div>
+  </div>
+
+  <audio id="C" src="notes/C.mp3"></audio>
+  <audio id="Db" src="notes/Db.mp3"></audio>
+  <audio id="D" src="notes/D.mp3"></audio>
+  <audio id="Eb" src="notes/Eb.mp3"></audio>
+  <audio id="E" src="notes/E.mp3"></audio>
+  <audio id="F" src="notes/F.mp3"></audio>
+  <audio id="Gb" src="notes/Gb.mp3"></audio>
+  <audio id="G" src="notes/G.mp3"></audio>
+  <audio id="Ab" src="notes/Ab.mp3"></audio>
+  <audio id="A" src="notes/A.mp3"></audio>
+  <audio id="Bb" src="notes/Bb.mp3"></audio>
+  <audio id="B" src="notes/B.mp3"></audio>
+  <footer class="footer">
+    <div class="footer-note">
+      #100days100projects
+    </div>
+    <div class="footer-note">
+      Made by Shivam Mahajan
+    </div>
+    <div class="footer-note">
+      Day 23
+    </div>
+  </footer>
+</body>
+
+</html>
