--- a/Day27/index.html
+++ b/Day27/index.html
@@ -10,7 +10,7 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="shortcut icon" href="paint-roller.png" type="image/png">
     <script src="script.js" defer></script>
-    <title>Document</title>
+    <title>Paint</title>
 </head>
 
 <body>
