--- a/Day32/index.html
+++ b/Day32/index.html
@@ -9,13 +9,13 @@
     <link rel="shortcut icon" href="fact.png" type="image/png">
     <script src="script.js" defer></script>
     <title>Factorial Calculator</title>
-</head>
+</head5
 
 <body>
     <div class="container">
         <header>Factorial Calculator</header>
         <div>
-            <input type="text" class="input" placeholder="Enter a positive integer...">
+            <input type="text" class="input" placeholder="Enter a positive integer..." maxlength="4">
             <button id="calculate">Calculate</button>
         </div>
         <div class="output"></div>
