--- a/Day36/index.html
+++ b/Day36/index.html
@@ -1,1 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="chain.png" type="image/png">
+  <script src="script.js" defer></script>
+  <title>Url Shortner</title>
+</head>
+
+<body>
+  <header>Url Shortener</header>
+  <div class="wrapper">
+    <input type="text" class="input-text" placeholder="Shorten a link here..." />
+    <button class="shorten-btn">shorten it!</button>
+    <p class="error-message invisible">Please enter a valid link</p>
+  </div>
+  <div class="links">
+  </div>
+  <footer class="footer">
+    <div class="footer-note">
+      #100days100projects
+    </div>
+    <div class="footer-note">
+      Made by Shivam Mahajan
+    </div>
+    <div class="footer-note">
+      Day 36
+    </div>
+  </footer>
+</body>
+
+</html>
