--- a/Day27/index.html
+++ b/Day27/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="shortcut icon" href="paint-roller.png" type="image/png">
-    <script src="script.js" defer></script>
+    
     <title>Paint</title>
 </head>
 
@@ -46,6 +46,7 @@
             Day 27
         </div>
     </footer>
+    <script src="script.js"></script>
 </body>
 
 </html>
