--- a/Day37/index.html
+++ b/Day37/index.html
@@ -1,1 +1,31 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="flipdown.css">
+  <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
+  <title>Days until Completition</title>
+</head>
+
+<body>
+  <div class="text">Days Until Completition of Challenge</div>
+  <div id="flipdown" class="flipdown"></div>
+  <footer class="footer">
+    <div class="footer-note">
+      #100days100projects
+    </div>
+    <div class="footer-note">
+      Made by Shivam Mahajan
+    </div>
+    <div class="footer-note">
+      Day 37
+    </div>
+  </footer>
+  <script src="flipdown.js"></script>
+  <script src="script.js"></script>
+</body>
+
+</html>
