--- a/Day36/index.html
+++ b/Day36/index.html
@@ -16,6 +16,7 @@
   <div class="wrapper">
     <input type="text" class="input-text" placeholder="Shorten a link here..." />
     <button class="shorten-btn">shorten it!</button>
+    <div class="loader" id="loader"></div>
     <p class="error-message invisible">Please enter a valid link</p>
   </div>
   <div class="links">
