--- a/Day39/index.html
+++ b/Day39/index.html
@@ -1,1 +1,38 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="help.png" type="image/png">
+    <script src="script.js" defer></script>
+    <title>Guess the number</title>
+</head>
+
+<body>
+    <div class="container">
+        <div class="title-text">
+            <p class="title">I'm thinking of a number between 1-1000.</p>
+            <p class="sub-title">Try to guess it!</p>
+        </div>
+
+        <input type="number" id="guess" />
+        <button class="guess-btn">Guess</button>
+        <p id="result">Guess it!</p>
+    </div>
+    <footer class="footer">
+        <div class="footer-note">
+            #100days100projects
+        </div>
+        <div class="footer-note">
+            Made by Shivam Mahajan
+        </div>
+        <div class="footer-note">
+            Day 39
+        </div>
+    </footer>
+</body>
+
+</html>
