--- a/Day38/index.html
+++ b/Day38/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press a Key to Start</h1>
+  <h1 id="level-title">Press Anywhere to Start</h1>
   <div class="container">
     <div class="row">
 
