--- a/Day45/index.html
+++ b/Day45/index.html
@@ -1,1 +1,49 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
+    <title>Guess the color</title>
+</head>
+
+<body>
+    <header>
+        Guess the color of given rgb value
+    </header>
+
+    <div class="display">
+        Current Color
+    </div>
+
+    <div class="container">
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+        <div class="square"></div>
+    </div>
+
+    <div class="btn">
+        <button id="reset">NEW COLORS</button>
+    </div>
+    <div class="message">
+    </div>
+    <footer class="footer">
+        <div class="footer-note">
+            #100days100projects
+        </div>
+        <div class="footer-note">
+            Made by Shivam Mahajan
+        </div>
+        <div class="footer-note">
+            Day 45
+        </div>
+    </footer>
+</body>
+
+</html>
