--- a/Day45/index.html
+++ b/Day45/index.html
@@ -29,7 +29,7 @@
     </div>
 
     <div class="btn">
-        <button id="reset">NEW COLORS</button>
+        <button id="reset">New Colors</button>
     </div>
     <div class="message">
     </div>
