--- a/Day37/index.html
+++ b/Day37/index.html
@@ -7,11 +7,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="flipdown.css">
   <link rel="shortcut icon" href="favicon.svg" type="image/x-icon">
-  <title>Days until Completition</title>
+  <title>Days until Completion</title>
 </head>
 
 <body>
-  <div class="text">Days Until Completition of Challenge</div>
+  <div class="text">Days Until Completion of Challenge</div>
   <div id="flipdown" class="flipdown"></div>
   <footer class="footer">
     <div class="footer-note">
